--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -3,5 +3,6 @@
     "/css/app.css": "/css/app.css",
     "/css/main.css": "/css/main.css",
     "/css/ingredients/index.css": "/css/ingredients/index.css",
-    "/css/ingredients/edit.css": "/css/ingredients/edit.css"
+    "/css/ingredients/edit.css": "/css/ingredients/edit.css",
+    "/css/recipes/create.css": "/css/recipes/create.css"
 }
